added header text and improved some css

--- a/sources/client/index.html
+++ b/sources/client/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
 	<div id='page'>
-		<div style='padding: 20px;'>
-			Loading
-		</div>
+		<div style='background-color: #311B92; width: 100vw; height: 100vh; display: grid; align-items: center;
+			font-size: 25px;'>Ładowanie</div>
 	</div>
 </body>
 </html>
